--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ google_analytics: ""
 # Site navigation - each item must have a title and a url.
 navigation:
   - text: Blog
-    url: /tags
+    url: /tags/
   - text: CV
-    url: /cv
+    url: /cv/
 
 # The shortname for your Disqus site to enable comments.
 disqus:
