--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,14 @@ accent_color: '#2d72d9'
 footer:
   content: "Copyright &copy; 2007-21 To Sing Fung<br>Powered by Jekyll. Theme modified from Scriptor"
   has_social: false
+  
+# Plugins
+plugins:
+  - jekyll-paginate
+
+# http://jekyllrb.com/docs/pagination/
+paginate: 3
+paginate_path: '/page:num/'
 
 # Permalinks
 permalink: /:title
